# enikki

./: .gitignore  Makefile  README.md  docker-compose.yml
.agent/rules/: issue-guide.md
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/fixtures/: sample_conversation_logs.json
apps/api/src/: diary_workflow.py  discord_notifier.py  main.py  models.py  test_gemini_2_5.py
apps/web/: .env.example  .gitignore  README.md  eslint.config.js  firebase.json  package.json  pnpm-lock.yaml  svelte.config.js
docs/: deployment-secrets-template.md  deployment.md  design.md  kickoff.md  zenn-article.md
issues/: README.md  TEMPLATE.md
issues/00_BACKLOG/: async_diary_generation.md  connect_gemini_live_api.md  create_demo_movie.md  create_frontend_environment.md  create_make_command_for_creating_issue.md  create_vertexai_token_endpoint.md  deploy_frontend_to_firebase_hosting.md  discord_webhook_per_user.md  fetch-image-url.md  full-conversation.md  implement_diary_generation_logic.md  switch_to_gemini_2_5_flash_image.md  test-make-issue.md  write_zenn_article.md
issues/10_TODO/: add_api_key_auth.md  ads.md  setup-issue-tracking.md
issues/20_DOING/: create_frontend_environment.md  deploy_api_to_cloud_run.md  deploy_frontend_to_firebase_hosting.md  implement_diary_ingestion.md  renew-design.md  update-prompt.md  write_zenn_article.md
issues/90_DONE/: add_api_key_auth.md  add_favicon_to_frontend.md  ads.md  async_diary_generation.md  connect_gemini_live_api.md  create_backend.md  create_demo_movie.md  create_deployment_doc.md  (+16 more)
(+17 files in other folders)
